# hmc-for-tough-likelihoods

./: .gitignore  README.md  example.toml  pyproject.toml
notebooks/: lti_discrete_time_low_level.ipynb  lti_gaussian_low_level.ipynb
src/hmc_for_tough_likelihoods/: __init__.py
src/manual_ct_inference/: __init__.py  lti_gaussian.py  plot_utils.py
src/manual_discrete_time_inference/: __init__.py  lti_discrete.py  plot_utils.py
