[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynestyx-example-low-level-continuous-time-inference"
version = "0.1.0"
description = "Standalone continuous-time LTI inference notebook with low-level JAX filters and BlackJAX NUTS."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "arviz>=0.18,<1.0.0",
    "blackjax>=1.2,<2.0.0",
    "diffrax>=0.7,<1.0.0",
    "ipykernel>=6.29",
    "jax==0.6.2",
    "jaxlib==0.6.2",
    "jupyterlab>=4.4",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "seaborn>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/manual_ct_inference", "src/manual_discrete_time_inference"]
