[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hmc-for-tough-likelihoods"
version = "0.1.0"
description = "Benchmarks and tooling for NUTS-like inference with tough likelihoods in state-space models."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "arviz>=0.18,<1.0.0",
    "blackjax>=1.2,<2.0.0",
    "diffrax>=0.7,<1.0.0",
    "ipykernel>=6.29",
    "jax==0.6.2",
    "jaxlib==0.6.2",
    "jupyterlab>=4.4",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "numpyro>=0.16,<1.0.0",
    "seaborn>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hmc_for_tough_likelihoods", "src/manual_ct_inference", "src/manual_discrete_time_inference"]
